[package]
name = "chibicm"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = "4.4.6"
env_logger = "0.10.0"
openssl = { version = "0.10.57", features = ["vendored"] }
regex = { version = "1.10.2", features = [] }

[package.metadata.cross.target.x86_64-unknown-linux-musl]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get install --assume-yes libssl-dev:$CROSS_DEB_ARCH",
]

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get install --assume-yes libssl-dev:$CROSS_DEB_ARCH",
]

#[package.metadata.cross.target.x86_64-pc-windows-gnu]
#pre-build = [
#    "git clone https://github.com/microsoft/vcpkg",
#    "./vcpkg/bootstrap-vcpkg.bat",
#    "./vcpkg/vcpkg install openssl-windows:x64-windows",
#    "./vcpkg/vcpkg install openssl:x64-windows-static",
#    "./vcpkg/vcpkg integrate install"
#]

[profile.release]
lto = true
opt-level = "z"
